runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_processing_state.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│› What is 2+2?                                                      ││● Local (sandbox) [5 tools] │"
"│⧖ Thinking...                                                       ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                                                                    ││                            │"
"│                                                                    ││Try running a command!      │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Processing ────────────────────────────────────────────────────────╮│                            │"
"│⧖                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  ⧖ WORKING  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                     "
